--- a/templates/index.html
+++ b/templates/index.html
@@ -8,57 +8,66 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
+
+
+
   <div class="container">
     <div class="title">Confronto Fatture</div>
     <div class="content">
-      <form action="#">
+      <form action="confronta" method="post">
         <div class="user-details">
+
           <div class="input-box">
             <span class="details">F1</span>
-            <input type="text" placeholder="Consumo Kw/h" required>
+            <input type="text" name="consumo_f1" placeholder="Consumo Kw/h" required>
           </div>
+
           <div class="input-box">
             <span class="details">F2</span>
-            <input type="text" placeholder="Consumo Kw/h" required>
+            <input type="text" name="consumo_f2" placeholder="Consumo Kw/h" required>
           </div>
+
           <div class="input-box">
             <span class="details">F3</span>
-            <input type="text" placeholder="Consumo Kw/h" required>
+            <input type="text" name="consumo_f3" placeholder="Consumo Kw/h" required>
           </div>
 
            <div class="input-box">
             <span class="details">Perdite di rete</span>
-            <input type="text" placeholder="BT 10.2 e MT 3.8" required>
+            <input type="text" name="perdite_rete" placeholder="BT 10.2 e MT 3.8" required>
           </div>
-
-
 
           <div class="input-box">
             <span class="details">Attuale fornitore:</span>
-            <input type="text" placeholder="Costo F1" required>
+            <input type="text" name="costo_attuale_f1" placeholder="Costo F1" required>
           </div>
+
           <div class="input-box">
             <span class="details"></span><br>
-            <input type="text" placeholder="Costo F2" required>
+            <input type="text" name="costo_attuale_f2" placeholder="Costo F2" required>
           </div>
+
           <div class="input-box">
             <span class="details"></span><br>
-            <input type="text" placeholder="Costo F3" required>
+            <input type="text" name="costo_attuale_f3" placeholder="Costo F3" required>
           </div>
+
           <div class="input-box"></div>
           <div class="input-box">
-
             <span class="details">Fareconsulenza:</span>
-            <input type="text" placeholder="Costo F1" required>
+            <input type="text" name="costo_fareconsulenza_f1" placeholder="Costo F1" required>
           </div>
+
           <div class="input-box">
             <span class="details"></span><br>
-            <input type="text" placeholder="Costo F2" required>
+            <input type="text" name="costo_fareconsulenza_f2" placeholder="Costo F2" required>
           </div>
+
           <div class="input-box">
             <span class="details"></span><br>
-            <input type="text" placeholder="Costo F3" required>
+            <input type="text" name="costo_fareconsulenza_f3" placeholder="Costo F3" required>
           </div>
+
           <div class="input-box"></div>
         </div>
 
