--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,65 @@
 <!DOCTYPE html>
-<!-- Designined by CodingLab - youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title> Confronto Fatture | Fareconsulenza s.r.l </title>
-    <link rel="stylesheet" href="../static/style.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <head>
+      <meta charset="UTF-8">
+      <title> Confronto Fatture | Fareconsulenza s.r.l </title>
+      <link rel="stylesheet" href="../static/index.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
-
-
-
-  <div class="container">
-    <div class="title">Confronto Fatture</div>
-    <div class="content">
-      <form action="confronta" method="post">
-        <div class="user-details">
-
-          <div class="input-box">
-            <span class="details">F1</span>
-            <input type="text" name="consumo_f1" placeholder="Consumo Kw/h" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details">F2</span>
-            <input type="text" name="consumo_f2" placeholder="Consumo Kw/h" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details">F3</span>
-            <input type="text" name="consumo_f3" placeholder="Consumo Kw/h" required>
-          </div>
-
-           <div class="input-box">
-            <span class="details">Perdite di rete</span>
-            <input type="text" name="perdite_rete" placeholder="BT 10.2 e MT 3.8" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details">Attuale fornitore:</span>
-            <input type="text" name="costo_attuale_f1" placeholder="Costo F1" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details"></span><br>
-            <input type="text" name="costo_attuale_f2" placeholder="Costo F2" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details"></span><br>
-            <input type="text" name="costo_attuale_f3" placeholder="Costo F3" required>
-          </div>
-
-          <div class="input-box"></div>
-          <div class="input-box">
-            <span class="details">Fareconsulenza:</span>
-            <input type="text" name="costo_fareconsulenza_f1" placeholder="Costo F1" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details"></span><br>
-            <input type="text" name="costo_fareconsulenza_f2" placeholder="Costo F2" required>
-          </div>
-
-          <div class="input-box">
-            <span class="details"></span><br>
-            <input type="text" name="costo_fareconsulenza_f3" placeholder="Costo F3" required>
-          </div>
-
-          <div class="input-box"></div>
-        </div>
-
-        <div class="button">
-          <input type="submit" value="CONFRONTA">
-        </div>
-
-      </form>
-    </div>
-  </div>
-
-</body>
+   <body>
+      <div class="container">
+         <div class="title">Confronto Fatture</div>
+         <div class="content">
+            <form action="confronta" method="post">
+               <div class="user-details">
+                  <div class="input-box">
+                     <span class="details">F1</span>
+                     <input type="text" name="consumo_f1" placeholder="Consumo Kw/h" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details">F2</span>
+                     <input type="text" name="consumo_f2" placeholder="Consumo Kw/h" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details">F3</span>
+                     <input type="text" name="consumo_f3" placeholder="Consumo Kw/h" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details">Perdite di rete</span>
+                     <input type="text" name="perdite_rete" placeholder="BT 10.2 e MT 3.8" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details">Attuale fornitore:</span>
+                     <input type="text" name="costo_attuale_f1" placeholder="Costo F1" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details"></span><br>
+                     <input type="text" name="costo_attuale_f2" placeholder="Costo F2" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details"></span><br>
+                     <input type="text" name="costo_attuale_f3" placeholder="Costo F3" required>
+                  </div>
+                  <div class="input-box"></div>
+                  <div class="input-box">
+                     <span class="details">Fareconsulenza:</span>
+                     <input type="text" name="costo_fareconsulenza_f1" placeholder="Costo F1" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details"></span><br>
+                     <input type="text" name="costo_fareconsulenza_f2" placeholder="Costo F2" required>
+                  </div>
+                  <div class="input-box">
+                     <span class="details"></span><br>
+                     <input type="text" name="costo_fareconsulenza_f3" placeholder="Costo F3" required>
+                  </div>
+                  <div class="input-box"></div>
+               </div>
+               <div class="button">
+                  <input type="submit" value="CONFRONTA">
+               </div>
+            </form>
+         </div>
+      </div>
+   </body>
 </html>
