--- a/templates/confronto.html
+++ b/templates/confronto.html
@@ -14,19 +14,19 @@
                <div class="user-details">
                   <div class="input-box">
                      <span class="details">F1</span>
-                     <input type="text" name="consumo_f1" value=" " readonly="readonly" required>
+                     <input type="text" name="consumo_f1" value="30" readonly required>
                   </div>
                   <div class="input-box">
                      <span class="details">F2</span>
-                     <input type="text" name="consumo_f2" readonly="readonly" required>
+                     <input type="text" name="consumo_f2" readonly required>
                   </div>
                   <div class="input-box">
                      <span class="details">F3</span>
-                     <input type="text" name="consumo_f3" readonly="readonly" required>
+                     <input type="text" name="consumo_f3" readonly required>
                   </div>
                   <div class="input-box">
                      <span class="details">Totale</span>
-                     <input type="text" name="perdite_rete" readonly="readonly"  required>
+                     <input type="text" name="perdite_rete" readonly  required>
                   </div>
                   <div class="input-box"></div>
                   <div class="input-box"></div>
@@ -37,19 +37,19 @@
                   <div class="input-box"></div>
                   <div class="input-box"><br>
                      <span class="details">F1</span>
-                     <input type="text" name="perdite_rete" readonly="readonly" required>
+                     <input type="text" name="perdite_rete" readonly required>
                   </div>
                   <div class="input-box"><br>
                      <span class="details">F2</span>
-                     <input type="text" name="perdite_rete" readonly="readonly" required>
+                     <input type="text" name="perdite_rete" readonly required>
                   </div>
                   <div class="input-box"><br>
                      <span class="details">F3</span>
-                     <input type="text" name="perdite_rete" readonly="readonly" required>
+                     <input type="text" name="perdite_rete" readonly required>
                   </div>
                   <div class="input-box"><br>
                      <span class="details">totale</span>
-                     <input type="text" name="perdite_rete" readonly="readonly" required>
+                     <input type="text" name="perdite_rete" readonly required>
                   </div>
                </div>
                <div class="button">
