--- a/templates/confronto.html
+++ b/templates/confronto.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <title> Confronto Fatture | Fareconsulenza s.r.l </title>
-      <link rel="stylesheet" href="../static/confronto.css">
+      <link rel="stylesheet" href="../static/css/confronto.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
