--- a/templates/dati.html
+++ b/templates/dati.html
@@ -15,13 +15,13 @@
                <span class="details">CONSULENTE:</span>
                <div class="user-details">
                   <div class="input-box">
-                     <input type="text" name="nome_cognome_consulente" placeholder="nome cognome" required>
+                     <input type="text" name="nome_cognome_consulente" placeholder="nome cognome" autocomplete="off" required>
                   </div>
                   <div class="input-box">
-                     <input type="text" name="mail_consulente" placeholder="e-mail" required>
+                     <input type="email" name="mail_consulente" placeholder="e-mail" autocomplete="off" required>
                   </div>
                   <div class="input-box">
-                     <input type="text" name="numero_consulente" placeholder="cellulare" required>
+                     <input type="text" name="numero_consulente" placeholder="cellulare" autocomplete="off" required>
                   </div>
                   <select name="nomenclatura">
                      <option value="signore">Sig.</option>
@@ -35,13 +35,13 @@
                   <div class="input-box"></div>
                   <div class="input-box"></div>
                   <div class="input-box">
-                     <input type="text" name="nome_cognome_cliente" placeholder="nome cognome" required>
+                     <input type="text" name="nome_cognome_cliente" placeholder="nome cognome" autocomplete="off" required>
                   </div>
                   <div class="input-box">
-                     <input type="text" name="mail_cliente" placeholder="e-mail" required>
+                     <input type="email" name="mail_cliente" placeholder="e-mail" autocomplete="off" required>
                   </div>
                   <div class="input-box">
-                     <input type="text" name="numero_cliente" placeholder="cellulare" required>
+                     <input type="text" name="numero_cliente" placeholder="cellulare" autocomplete="off" required>
                   </div>
                   <select name="tipologia">
                      <option value="bimestrale">Bimestrale</option>
