--- a/templates/calcolo.html
+++ b/templates/calcolo.html
@@ -3,14 +3,14 @@
    <head>
       <meta charset="UTF-8">
       <title> Confronto Fatture | Fareconsulenza s.r.l </title>
-      <link rel="stylesheet" href="../static/css/index.css">
+      <link rel="stylesheet" href="../static/css/calcolo.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
       <div class="container">
          <div class="title">Confronto Fatture</div>
          <div class="content">
-            <form action="confronta" method="post">
+            <form action="confronto" method="post">
                <div class="user-details">
                   <div class="input-box">
                      <span class="details">F1</span>
