sessions and code adjustments

--- a/templates/confronto.html
+++ b/templates/confronto.html
@@ -10,7 +10,7 @@
       <div class="container">
          <div class="title">Risparmio in euro €</div>
          <div class="content">
-            <form action="confronto/dati" method="post">
+            <form action="dati" method="post">
                <div class="user-details">
                   <div class="input-box">
                      <span class="details">F1</span>
