--- a/templates/dati.html
+++ b/templates/dati.html
@@ -10,7 +10,7 @@
       <div class="container">
          <div class="title">INSERISCI I DATI</div>
          <div class="content">
-            <form action="/confronto/dati/scarica" method="post">
+            <form action="scarica" method="post">
                <br>
                <span class="details">CONSULENTE:</span>
                <div class="user-details">
