--- a/templates/calcolo.html
+++ b/templates/calcolo.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <div class="container">
-         <div class="title">Confronto Fatture</div>
+         <div class="title">Confronto Fattura</div>
          <div class="content">
             <form action="confronto" method="post">
                <div class="user-details">
