adding multipod option

--- a/templates/pod.html
+++ b/templates/pod.html
@@ -13,7 +13,7 @@
             <form action="calcolo" method="post">
                <div class="user-details">
                   <div class="input-box">
-                     <input type="text" name="numero_pod" placeholder="Numero POD" autocomplete="off" required>
+                     <input type="number" min="1" name="numero_pod" placeholder="Numero POD" autocomplete="off" required>
                   </div>
                </div>
                <div class="button">
