--- a/templates/dati.html
+++ b/templates/dati.html
@@ -38,7 +38,7 @@
                      <input type="text" name="nome_cognome_cliente" placeholder="nome cognome" autocomplete="off" required>
                   </div>
                   <div class="input-box">
-                     <input type="email" name="mail_cliente" placeholder="e-mail" autocomplete="off" required>
+                     <input type="email" name="mail_cliente" placeholder="e-mail" autocomplete="off">
                   </div>
                   <div class="input-box">
                      <input type="text" name="numero_cliente" placeholder="cellulare" autocomplete="off" required>
