--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css'>
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="../static/css/home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -35,10 +36,10 @@
                                  <div></div>
                                  <div></div>
                               </div>
-                              <a  class="hex-content" >
+                              <a  class="hex-content">
                                  <span class="hex-content-inner">
                                  <span class="icon">
-                                 <i class="fa fa-universal-access"></i>
+                                 <i class="fa fa-dashboard"></i>
                                  </span>
                                  <span class="title">Work in progrss...</span>
                                  </span>
@@ -58,10 +59,10 @@
                                  <div></div>
                                  <div></div>
                               </div>
-                              <a  class="hex-content">
+                              <a  class="hex-content" href="pod">
                                  <span class="hex-content-inner">
                                  <span class="icon">
-                                 <i class="fa fa-bullseye"></i>
+                                 <i class="fas fa-file-invoice-dollar"></i>
                                  </span>
                                  <span class="title">Confronto Fatture</span>
                                  </span>
@@ -84,7 +85,7 @@
                               <a  class="hex-content">
                                  <span class="hex-content-inner">
                                  <span class="icon">
-                                 <i class="fa fa-braille"></i>
+                                 <i class="fa fa-bolt"></i>
                                  </span>
                                  <span class="title">Work in progrss...</span>
                                  </span>
@@ -107,7 +108,7 @@
                               <a  class="hex-content">
                                  <span class="hex-content-inner">
                                  <span class="icon">
-                                 <i class="fa fa-id-badge"></i>
+                                 <i class="fa fa-address-book"></i>
                                  </span>
                                  <span class="title">Work in progrss...</span>
                                  </span>
@@ -130,7 +131,7 @@
                               <a  class="hex-content">
                                  <span class="hex-content-inner">
                                  <span class="icon">
-                                 <i class="fa fa-life-ring"></i>
+                                 <i class="fa fa-users"></i>
                                  </span>
                                  <span class="title">Work in progrss...</span>
                                  </span>
